--- a/database/.gitignore
+++ b/database/.gitignore
@@ -3,3 +3,5 @@ echo "ssh_keys/id_rsa_apcom" >> .gitignore
 echo "ssh_keys/id_rsa_apcom.pub" >> .gitignore
 git add .gitignore
 git commit -m "Ignore SSH private keys"
+
+../ssh_keys/*
