--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.12",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.8",
+        "chartjs-adapter-date-fns": "^3.0.0",
+        "date-fns": "^4.1.0"
     }
 }
