--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "chart.js": "^4.4.8",
         "chartjs-adapter-date-fns": "^3.0.0",
-        "date-fns": "^4.1.0"
+        "date-fns": "^4.1.0",
+        "dropzone": "^6.0.0-beta.2"
     }
 }
