--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "chart.js": "^4.4.8",
         "chartjs-adapter-date-fns": "^3.0.0",
         "date-fns": "^4.1.0",
-        "dropzone": "^6.0.0-beta.2"
+        "dropzone": "^6.0.0-beta.2",
+        "flowbite": "^3.1.2"
     }
 }
